--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
-html{
+*{
+  font-family: arial, sans-serif;
+  margin: 0;
+  padding: 0:
+}
 
+
+html{
+height: 100%
 }
 
 head{
@@ -8,23 +15,33 @@ head{
   color: #333;
 }
 
+input{
+  width: 100px:
+  height:40px;
+  padding: 12px;
+  font-size: 14px;
+  border: 0;
+}
+
+input:focus {
+  outline: none;
+}
+
 body{
-  font-family: arial, sans-serif;
   font-size: 14px;
   color: #333;
 }
 
 div {
-display:block;
 }
 
 img {
-  vertical-align: middle;
-
 }
 
 ul{
-
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 li {
@@ -32,33 +49,30 @@ li {
 }
 
 .navleft{
-  font-family: arial, sans-serif;
   font-size: 12px;
   color: #333;
   list-style: none;
-  padding; 4px;
-  margin: 8px;
+  margin: 4px;
+  text-align: left;
   float:left;
 
 }
 
 .navright{
-  font-family: arial, sans-serif;
   font-size: 12px;
   color: #333;
-  padding; 4px;
+  list-style: none;
   margin: 8px;
+  text-align: right;
   float: right;
 }
 
 .navbotleft {
-  font-family: arial, sans-serif;
   font-size: 14px;
   color: #333;
 }
 
 .navbotright{
-  font-family: arial, sans-serif;
   font-size: 14px;
   color: #333;
 }
@@ -69,7 +83,9 @@ li {
 }
 
 #searchbar {
-  font-family: arial, sans-serif;
+  border: 1px;
+  border-color: #f2f2f2;
+  box-shadow: 1px 1px 5px grey;
 }
 
 #logo {
@@ -78,16 +94,30 @@ li {
   padding-bottom: 10px;
 }
 
-.buttons {
-  font-family: arial, sans-serif;
-  font-size: 14px;
-  color: #333;
+#grid{
+  opacity: 0.5;
 }
 
-a:link {
-  text-decoration: none;
+#grid:hover{
+  opacity: 1;
 }
 
-a:visited{
+#mic {
+  position:relative;
+  height: 20px;
+  left:  320px;
+  padding-bottom: 2px;
+vertical-align: middle;
+}
+
+.navright:hover {
+  text-decoration: underline;
+}
+
+.navleft:hover {
+  text-decoration: underline;
+}
+
+a:link{
   text-decoration: none;
 }
