--- a/main.css
+++ b/main.css
@@ -32,15 +32,9 @@ body{
   color: #333;
 }
 
-div {
-}
-
-img {
-}
-
 ul{
   padding-top: 10px;
-  padding-right: 10px;
+  padding-right: 5px;
   padding-left: 10px;
 }
 
@@ -53,6 +47,7 @@ li {
   color: #333;
   list-style: none;
   margin: 4px;
+  padding-top: 4px;
   text-align: left;
   float:left;
 
@@ -62,7 +57,7 @@ li {
   font-size: 12px;
   color: #333;
   list-style: none;
-  margin: 8px;
+  margin: 4px;
   text-align: right;
   float: right;
 }
@@ -88,6 +83,12 @@ li {
   box-shadow: 1px 1px 5px grey;
 }
 
+#searchbar:hover {
+  border: 2px;
+  border-color: #f2f2f2;
+  box-shadow: 3px 3px 10px grey;
+}
+
 #logo {
   display: block;
   margin: 0 auto;
@@ -107,7 +108,21 @@ li {
   height: 20px;
   left:  320px;
   padding-bottom: 2px;
-vertical-align: middle;
+  vertical-align: middle;
+}
+
+#signIn {
+  background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+  border: 1px solid #4285f4;
+  color: white;
+  padding: 0px 12px;
+  font-weight: bold;
+  text-align:center;
+  position: relative;
+  z-index: auto;
+  line-height:28px;
+  bottom: 6px;
+  border-radius: 2px;
 }
 
 .navright:hover {
